syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.musicUpload.recommendationEngine.grpc.client";
option java_outer_classname = "GrpcClientProtoFile";

enum Type {
  USER = 0;
  SONG = 1;
  ALBUM = 2;
}

service Service {
  rpc GetLongList (RecommendationRequest) returns (RecommendationResponse);
}

message RecommendationRequest {
  int64 id = 1;
  int64 userId = 2;
  Type type = 3;
  int64 pageSize = 4;
  int64 pageNumber = 5;
}

message RecommendationResponse {
  repeated int64 ids = 1;
}